[package]
name = "entrait"
version = "0.3.4"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"
license = "MIT"
description = "Entrait: Trait-based, zero cost Inversion of Control for applications"
repository = "https://github.com/audunhalland/entrait/"
keywords = ["pattern", "ioc", "inversion-of-control", "di", "macro"]
categories = ["rust-patterns", "development-tools::testing"]

[features]
default = []
unimock = ["dep:unimock"]
use-async-trait = ["async-trait"]
use-associated-future = []
async-trait = ["dep:async-trait"]
nightly-tests = []

[dependencies]
entrait_macros = { path = "entrait_macros", version = "0.3.3" }
implementation = "0.1"
async-trait = { version = "0.1", optional = true }
unimock = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
feignhttp = "0.4"
mockall = "0.11"

[package.metadata.docs.rs]
features = ["unimock", "use-async-trait"]

[workspace]
members = [
    "entrait_macros",
    "examples/*"
]
