[package]
name = "entrait"
version = "0.5.0-alpha.1"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"
license = "MIT"
description = "Loosely coupled Rust application design made easy"
repository = "https://github.com/audunhalland/entrait/"
keywords = ["pattern", "ioc", "inversion-of-control", "di", "macro"]
categories = ["rust-patterns", "development-tools::testing"]

[features]
default = []
unimock = ["dep:unimock"]
use-boxed-futures = ["boxed-futures"]
use-associated-futures = []
boxed-futures = ["dep:async-trait"]
nightly-tests = []

[dependencies]
entrait_macros = { path = "entrait_macros", version = "0.5.0-alpha.1" }
implementation = "0.1"
async-trait = { version = "0.1", optional = true }
unimock = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
feignhttp = "0.4"
mockall = "0.11"
tracing = "0.1"

[lib]
# do not run doctest by default with `cargo hack`. They are tested with a separate `cargo test --doc` run.
doctest = false

[package.metadata.docs.rs]
features = ["unimock", "use-boxed-futures"]

[workspace]
members = [
    "entrait_macros",
    "examples/async-graphql",
    "examples/axum"
]
