[package]
name = "entrait"
version = "0.7.0-dev"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Loosely coupled Rust application design made easy"
repository = "https://github.com/audunhalland/entrait/"
keywords = ["pattern", "ioc", "inversion-of-control", "di", "macro"]
categories = ["rust-patterns", "development-tools::testing"]

[features]
default = []
unimock = ["dep:unimock"]

[dependencies]
entrait_macros = { path = "entrait_macros", version = "0.7.0-dev" }
implementation = "0.1"
unimock = { version = "0.6.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
feignhttp = "0.5"
mockall = "0.12"
tracing = "0.1"
async-trait = "0.1"

[lib]
# do not run doctest by default with `cargo hack`. They are tested with a separate `cargo test --doc` run.
doctest = false

[package.metadata.docs.rs]
features = ["unimock"]

[workspace]
members = [
    "entrait_macros",
    "examples/async-graphql",
    "examples/axum"
]
