[package]
name = "entrait"
version = "0.3.3"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"
license = "MIT"
description = "Entrait: Trait-based, zero cost Inversion of Control for applications"
repository = "https://github.com/audunhalland/entrait/"
keywords = ["ioc", "inversion-of-control", "di"]

[features]
default = []
nightly-tests = []

[dependencies]
entrait_macros = { path = "../entrait_macros", version = "0.3.3" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
async-trait = "0.1"
unimock = "0.3"
mockall = "0.11"
implementation = "0.1"
feignhttp = "0.4"
