[package]
name = "entrait_macros"
version = "0.4.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"
license = "MIT"
description = "Procedural macros reexported by entrait"
repository = "https://github.com/audunhalland/entrait/"
keywords = []

[dependencies]
syn = { version = "1.0.75", features = ["full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
