[package]
name = "entrait_macros"
version = "0.5.3"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
rust-version = "1.60"
license = "MIT"
description = "Procedural macros reexported by entrait"
repository = "https://github.com/audunhalland/entrait/"
keywords = ["macro"]
categories = ["rust-patterns"]

[dependencies]
syn = { version = "2.0.8", features = ["full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
