[package]
name = "example-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
entrait = { path = "../../", features = ["unimock"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
implementation = "0.1"
async-trait = "0.1"

[dev-dependencies]
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hyper = { version = "1", features = ["full"] }
serde_json = "1"
unimock = "0.6.2"
